# crap

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  crap.cpp  crap.h  crapper.cpp  rap.hpp  rap_callbacks.h  rap_conn.cpp  rap_conn.hpp  rap_conn_impl.hpp  rap_connbase.hpp  rap_constants.h  rap_exchange.cpp  rap_exchange.hpp  rap_frame.h  rap_frame.hpp  rap_header.h  rap_header.hpp  rap_kvv.hpp  rap_link.hpp  rap_muxer.hpp  rap_net.hpp  rap_reader.hpp  rap_record.hpp  rap_request.hpp  rap_response.hpp  rap_route.hpp  rap_server.hpp  rap_stats.hpp  rap_text.hpp  rap_textmap.c  rap_types.h  rap_writer.hpp
crapper/: crapper.cpp  rapper.cpp  rapper.hpp  rapper_conn.cpp  rapper_conn.hpp  rapper_server.cpp  rapper_server.hpp
test/: CMakeLists.txt
